# WCAG-2.1-AA-Remediation-Tool

./: .env.example  .gitattributes  .gitignore  12.0_updated - WCAG 2.1 AA Compliant_report.html  12.0_updated - converted from MS Word - WCAG 2.1 AA Compliant_report.html  12.0_updated_editable - WCAG 2.1 AA Compliant_report.html  12.0_updated_editable_ADA - WCAG 2.1 AA Compliant_report.html  ADVERSARIAL_V4_TEST_REPORT.md  CPSSPPC_TRAVEL_FORM_1.9_CGI - Politte - WCAG 2.1 AA Compliant_report.html  CVE_AUDIT.md  EDGE_CASE_BASELINE.md  EDGE_CASE_TEST_REPORT.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  FIX_REPORT.md  FIX_REPORT_ROUND2.md  GAP-FIX-COMPLETE.md  GROUND_TRUTH.md  MONITORING.md  PHASE-COMPLETE-0.md  PHASE-COMPLETE-1.md  PHASE-COMPLETE-2.md  PHASE-COMPLETE-3.md  PHASE-COMPLETE-4.md  PHASE-COMPLETE-5.md  PHASE-COMPLETE-6.md  PHASE-COMPLETE-7.md  PHASE-COMPLETE-FINAL.md  PHASE-COMPLETE-IRS-FIXES.md  R2_AUDIT_REPORT.md  R3_BUILD_REPORT.md  README.md  ROLLBACK.md  TEST_SUITE_REPORT.md  VERIFICATION_AUDIT.md  VERIFICATION_COMPLETE.md  app.py  fix_annotations.py  fix_artifacts.py  fix_bookmarks.py  (+25 more)
docs/: MONITORING.md  ROLLBACK.md  SETUP.md
frontend/: index.html
reporting/: html_generator.py  summary_generator.py
scripts/: generate_fixtures.py  smoke_test.py  sync_to_hf.py
src/: __init__.py  constants.py  models.py
tests/: conftest.py  generate_audit_pdfs.py  generate_audit_pdfs_v2.py  generate_audit_pdfs_v3.py  generate_verification_pdfs.py  integration_fixtures.py  test_app.py  test_audit_fixes.py  test_browser_compatibility.py  test_checkpoint_coverage.py  (+37 more)
(+46 files in other folders)
