[project]
name = "wcag-pdf-tool"
version = "1.0.0"
description = "WCAG 2.1 AA PDF Conversion and Verification Tool"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "E401", "E402", "E702", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401", "F841"]
"_archive/*" = ["ALL"]
"app.py" = ["F401"]
"fix_figure_alt_text.py" = ["F401"]
"fix_link_alt.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "browser: marks browser-based tests",
]

[tool.coverage.run]
source = [
    "app",
    "pipeline",
    "wcag_auditor",
    "fix_title",
    "fix_content_streams",
    "fix_untagged_content",
    "fix_widget_mapper",
]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 50
